--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "firebase": "^8.2.7",
     "sass": "^1.32.7",
     "typescript": "^4.1.2",
     "vite": "^2.0.0-beta.69"
