--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.1"
   },
@@ -24,6 +25,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
