--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "@types/redux-persist": "^4.3.1",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "firebase": "^8.2.7",
     "sass": "^1.32.7",
     "typescript": "^4.1.2",
-    "vite": "^2.0.0-beta.69"
+    "vite": "^2.0.1"
   }
 }
