--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && copyfiles -f ./src/_redirects dist/",
     "serve": "vite preview"
   },
   "dependencies": {
@@ -32,6 +32,7 @@
     "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "copyfiles": "^2.4.1",
     "firebase": "^8.2.7",
     "sass": "^1.32.7",
     "typescript": "^4.1.2",
