--- a/package.json
+++ b/package.json
@@ -17,25 +17,28 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/lodash.memoize": "^4.1.6",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-persist": "^4.3.1",
+    "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "copyfiles": "^2.4.1",
-    "firebase": "^8.2.7",
-    "sass": "^1.32.7",
-    "typescript": "^4.1.2",
-    "vite": "^2.0.1"
+    "firebase": "^8.3.0",
+    "sass": "^1.32.8",
+    "typescript": "^4.2.3",
+    "vite": "^2.0.5"
   }
 }
