--- a/package.json
+++ b/package.json
@@ -1,44 +1,35 @@
 {
-  "name": "crwn-clothing",
-  "version": "0.0.0",
+  "name": "crwn-clothing-server",
+  "version": "1.0.0",
+  "engines": {
+    "node": "v14.15.5",
+    "npm": "6.14.11"
+  },
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build && copyfiles -f ./src/_redirects dist/",
-    "serve": "vite preview"
+    "client": "cd client && npm run dev",
+    "server": "nodemon -r esm -r ts-node/register server.ts",
+    "build": "cd client && npm run build",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "node -r esm -r ts-node/register server.ts",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
-    "lodash.memoize": "^4.1.2",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-stripe-checkout": "^2.6.3",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.2.1"
+    "@tinyhttp/app": "^1.2.17",
+    "@tinyhttp/logger": "^1.2.1",
+    "@types/stripe": "^8.0.417",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
+    "sirv": "^1.0.11",
+    "stripe": "^8.138.0"
   },
   "devDependencies": {
-    "@types/firebase": "^3.2.1",
-    "@types/lodash.memoize": "^4.1.6",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.8",
-    "@types/redux-persist": "^4.3.1",
-    "@types/redux-saga": "^0.10.5",
-    "@types/reselect": "^2.2.0",
-    "@types/styled-components": "^5.1.8",
-    "@vitejs/plugin-react-refresh": "^1.1.0",
-    "copyfiles": "^2.4.1",
-    "firebase": "^8.3.0",
-    "sass": "^1.32.8",
-    "typescript": "^4.2.3",
-    "vite": "^2.0.5"
+    "@types/body-parser": "^1.19.0",
+    "concurrently": "^6.0.0",
+    "esm": "^3.2.25",
+    "nodemon": "^1.19.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
